test/semantic_errors/missing_variable_declaration2.mc
void main() {
    bool b;
    b = var;
}